# growbot_ws

./: .gitignore  .gitmodules  README.md  melodic-ros_comm-wet.rosinstall
scripts/: install-service.bash  install-ws.bash  start-ws.bash
src/growbot_sim/: CMakeLists.txt  package.xml
src/growbot_sim/config/: growbot_control.yaml
src/growbot_sim/launch/: gazebo.launch  rviz.launch
src/growbot_sim/urdf/: growbot.urdf.xacro  macros.xacro
src/growbot_sim/urdf/components/: box_link.xacro  carousel.xacro
src/growbothub_tlc/: CMakeLists.txt  package.xml
src/growbothub_tlc/data/: radishes.tflite
src/growbothub_tlc/launch/: growbothub.launch  growbothub2.launch
src/growbothub_tlc/src/: I2C.py  classifier.py  classifier_cli.py  devices.py  pos_controller.py  scheduler.py  web.py
src/growbothub_tlc/srv/: DeviceReadWrite.srv  DeviceSummary.srv
